--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -29,10 +29,10 @@ Y_{j}^0 : = \left( 1 - V \right) Y_{j,H}^0 + \left( V \right) Y_{j,C}^0. \label{
 \end{equation}
 It is also useful to assess the average effectiveness of a program relative to attending an alternative preschool with associated causal parameter:
 \begin{equation}\label{eq:cont2}
-\Delta_j \left( \text{\textbf{Fix }} V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, W = 1 \right] := \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, \bm{B} \in \mathcal{B}_0 \right],
+\Delta_j \left( \text{\textbf{Fix }} V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, W = 1 \right] := \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-\noindent where ``\textbf{Fix}'' means $V$ is fixed to the designated value.\footnote{For the distinction between fixing and conditioning, see \citet{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory}.}
+\noindent ``\textbf{Fix}'' means $V$ is fixed to the designated value.\footnote{For the distinction between fixing and conditioning, see \citet{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory}.}
 
 Random assignment to treatment does not directly identify the parameters in Equations~\eqref{eq:cont1} or~\eqref{eq:cont2}. Econometric methods are required. In this paper, we rely on matching to control for selection into home or an alternative preschool by the control group. We assume that observed characteristics are sufficient to describe the selection into alternative center-based arrangements. In Appendix~\ref{appendix:results}, we show the balance across the groups in the matched samples along the observed selection variables (e.g., family characteristics, Apgar scores, gender), further justifying this approach.\footnote{To select adequate variables for matching, we conduct goodness of fit tests to find the most predictive set of baseline characteristics subject to penalty for adding parameters. This procedure is fully explained in Appendix~\ref{appendix:results}.}
 
