--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -68,7 +68,7 @@ Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportio
 
 As a group, the children in the control group that enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, although, as we show below, there are important differences by gender of the child. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index that defines ABC/CARE eligibility. Control children who attend alternative formal care generally have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group.
 
-Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare. The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is whether the mother works. The mother is more likely to work at baseline for children attending alternative care. We discuss selection into alternative care settings by gender in Section~\ref{sec:gender-differences}.
+Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare. The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is whether the mother works. The mother is more likely to work at baseline for children attending alternative care. We discuss selection into alternative care settings by gender of the child in Section~\ref{sec:gender-differences}.
 
 While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. In terms of child-staff ratios, ABC/CARE far exceeded the highest state and federal standards of the day.\footnote{Appendix~\ref{appendix:tetanus} shows this and discusses the standards of the day \citep{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach,Burchinal_Campbell_etal_1997_CD}} We do not have baseline information on the quality of the parent-child interaction to be able to precisely analyze the environments of those who stayed at home.
 
