as sent to typists 6/15

--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,6 +1,6 @@
-We have established that there are pronounced gender differences in the patterns of positive and statistically significant treatment effects.\footnote{We summarize previous research on gender differences in Table~\ref{tab:litreview-table}.} Figure~\ref{fig:ppositive} reports the estimated combining functions by gender by category of care used by the control group. When we divide the sample by gender and take-up of alternative formal childcare, samples are small and differences are less precisely determined.\footnote{See Appendix~\ref{appendix:results} for estimates of individual treatment effects and additional specifications of combining functions.}
+We have established that there are pronounced gender differences in the patterns of positive and statistically significant treatment effects.\footnote{We summarize previous research on gender differences in Table~\ref{tab:litreview-table}.} Figure~\ref{fig:ppositive} reports the estimated combining functions by gender and by category of care used by the control group. When we divide the sample by gender and take-up of alternative formal childcare, samples are small and differences are less precisely determined.\footnote{See Appendix~\ref{appendix:results} for estimates of individual treatment effects and additional specifications of combining functions.}
 
-The null hypothesis  of no treatment effect is equivalent to the hypothesis that the proportion of outcomes is equal to $0.500$. Figure~\ref{fig:ppositivehome} displays combining functions for treatment effects comparing outcomes of the treated to outcomes for those who stay at home. Figure~\ref{fig:ppositivealternative} displays comparable combining functions comparing treatment effects for those participating in ABC/CARE compared to those who attend alternative formal childcare. Both of these estimates account for selection into the mode of childcare using matching.
+The null hypothesis  of no treatment effect is equivalent to the hypothesis that the proportion of outcomes is equal to $0.500$. Figure~\ref{fig:ppositivehome} displays combining functions for treatment effects comparing outcomes of the treated to outcomes for those who stay at home. Figure~\ref{fig:ppositivealternative} displays analogous combining functions comparing treatment effects of those participating in ABC/CARE to those who attend alternative formal childcare. Both of these estimates account for selection into the mode of childcare using matching.
 
 Comparing ABC/CARE to those who stay at home (Figure~\ref{fig:ppositivehome}), a higher proportion of the treatment effects are positive for women than for men. While the female proportion is statistically significantly larger than $0.500$, the male proportion is not. Figure~\ref{fig:ppositivealternative} shows a different pattern comparing ABC/CARE to those who attended alternative formal childcare. Close to 75\% of the treatment effects are positive for men. For women, the proportion of positive treatment effects is similar to the proportion obtained by comparing ABC/CARE to those who stay at home. From this analysis, we conclude that ABC/CARE was effective for men compared to alternative formal childcare programs, but not when compared to staying at home. ABC/CARE was effective for women regardless of the mode of childcare used by the controls.\footnote{Disaggregating by outcomes, by category, gender, and mode of childcare for controls produces a noisy pattern that is broadly consistent in Figure~\ref{fig:ppositive}.}
 
@@ -51,7 +51,10 @@ Comparing ABC/CARE to those who stay at home (Figure~\ref{fig:ppositivehome}), a
 
 This difference suggests that boys and girls faced different situations in their control group conditions, especially in their home environments.\footnote{Table~\ref{table:controlsubscharacteristics} summarizes the baseline characteristics by gender and mode of childcare.} About the same percentage of control-group girls attended alternative formal childcare (73\%) as did control-group boys (76\%). See Figure~\ref{figure:altgender}. No girls who stayed at home had working mothers at baseline while 23\% of the girls who attended alternative formal childcare had mothers working at baseline. For boys, 14\% of those who stayed at home had mothers working at baseline while 29\% of those who attended alternative formal childcares had working mothers.
 
-Girls' families were more resource-constrained compared to their male counterparts, girls in the control group were raised in a more disadvantaged environment or went to lower-quality preschools. Thus, as documented in Section~\ref{sec:treatment-effects}, they benefited more from ABC/CARE than boys when compared to the next best alternative as perceived by their parents,.
+Girls' families were more resource-constrained compared to their male counterparts, girls in the control group were raised in a more disadvantaged environment or went to lower-quality preschools. Thus, as documented in Section~\ref{sec:treatment-effects}, they benefited more from ABC/CARE than boys when compared to the next best alternative as perceived by their parents.
+
+
+To formally test the differences in home-life advantage between control-group girls and boys, we create an index of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. This index is distinct from HRI. We assess how girls and boys fit into the overall distribution of this latent measure in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).
 
 Table~\ref{table:disadtests} uses our constructed measure of disadvantage to test the difference in baseline disadvantage across boys and girls. We reject the null hypothesis of a common distribution of our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage by gender of the child, and provide the corresponding tests in Table~\ref{table:disadtests}.
 
@@ -75,5 +78,4 @@ As shown in Section~\ref{sec:treatment-effects}, the childcare supplied by ABC/C
 
 More fathers are present for boys. At baseline, this leads to higher family income for boys despite the different treatment effect for the mothers of girls after treatment is administered. Family income is higher for boys than girls. This is true both before and after treatment. Boys appear to benefit from the greater presence of the father, but there is no program-induced treatment effect on inducing fathers into the home.
 
-To formally test the differences in home-life advantage between control-group girls and boys, we create an index of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. This index is distinct from HRI. We assess how girls and boys fit into the overall distribution of this latent measure in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).
 
