--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -6,4 +6,4 @@ Our analysis has implications for the recent literature on gender differences in
 
 Another interpretation, and the one emphasized in this paper, is that male home environments are generally better. This is consistent with the evidence of \citet{Dahl_Moretti_2008_RES} who show that fathers are more likely to stay at home with the mother if a boy is born. This improves family income at baseline. Our evidence on baseline differences by gender is consistent with this interpretation. Girls benefit relatively more in terms of the gains in HOME scores and in family income.
 
-Our data are too crude to distinguish sharply between these two interpretations. However, the weight of the evidence in this paper supports the latter interpretation. Treatment effects are the difference between treated and control conditions and both need to be accounted for in assessing the sources of treatment effects. 
+Our data are too crude to distinguish sharply between these two interpretations. However, the weight of the evidence in this paper supports the latter interpretation. Baseline conditions need to be accounted for in interpreting the sources of gender differences in treatment effects. 
