--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -25,11 +25,11 @@ Y_{j}^0 : = \left( 1 - V \right) Y_{j,H}^0 + \left( V \right) Y_{j,C}^0. \label{
 \end{equation}
 \noindent It is fruitful to assess the effectiveness of the program compared to a world in which the child stays at home full time. The associated causal parameter is:
 \begin{equation}\label{eq:cont1}
-\Delta_j \left(\text{\textbf{Fix }}V = 0 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }}V = 0, W = 1 \right] := \mathbb{E} \left[Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }}V = 0, \bm{B} \in \mathcal{B}_0 \right].
+\Delta_j \left(\text{\textbf{Fix }}V = 0 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }}V = 0, W = 1 \right] = \mathbb{E} \left[Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }}V = 0, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 It is also useful to assess the average effectiveness of a program relative to attending an alternative preschool with associated causal parameter:
 \begin{equation}\label{eq:cont2}
-\Delta_j \left( \text{\textbf{Fix }} V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, W = 1 \right] := \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, \bm{B} \in \mathcal{B}_0 \right].
+\Delta_j \left( \text{\textbf{Fix }} V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, W = 1 \right] = \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | \text{\textbf{Fix }} V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
 \noindent ``\textbf{Fix}'' means $V$ is fixed to the designated value.\footnote{For the distinction between fixing and conditioning, see \citet{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory}.}
@@ -49,7 +49,7 @@ C_\ell = \sum^{B_\ell}_{j=1} \bm{1} (\Delta_{j} >0),
 
 \noindent The proportion of beneficial outcomes, our combining function, is $C_\ell / B_\ell$. In our empirical application we consider all the outcomes as a block. Different blocks are grouped by age (e.g.,\ childhood, school age, adulthood) or by common categories (e.g.,\ employment, health, crime).
 
-Under the null hypothesis of no treatment effect for the block of outcomes indexed by $\mathcal{J}_\ell$, and assuming the validity of asymptotic approximations, $C_\ell / B_\ell$ is centered at $\frac{1}{2}$.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} establish a validity of asymptotic approximations for the ABC sample.} We compute the fraction $C_\ell / B_\ell$ and the corresponding bootstrapped empirical distribution to obtain a $p$-value. The bootstrap procedure accounts for dependence in unobservables across outcomes (within blocks) in a general way.
+Under the null hypothesis of no treatment effect for the block of outcomes indexed by $\mathcal{J}_\ell$, and assuming the validity of asymptotic approximations, $C_\ell / B_\ell$ is centered at $\frac{1}{2}$.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} establish the validity of asymptotic approximations for the ABC sample.} We compute the fraction $C_\ell / B_\ell$ and the corresponding bootstrapped empirical distribution to obtain a $p$-value. The bootstrap procedure accounts for dependence in unobservables across outcomes (within blocks) in a general way.
 
 Our test based on the number of outcomes for which the treatment effect is statistically significant at the $10\%$ level produces similar inference. Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing. We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}.\footnote{In Appendix~\ref{appendix:results}, we present yet another alternative. We calculate a latent measure, using principal component analysis, of the set of outcomes within a block and perform inference on this latent measure. This analysis also points to beneficial effects of the program.}
 
@@ -57,4 +57,4 @@ Our test based on the number of outcomes for which the treatment effect is stati
 
 Under the null hypothesis of no treatment effects, pairings of treatment-group children with control-group children should be as frequent as pairings of treatment-group children with other treatment-group children and control-group children with other control-group children. If a relatively large number of pairs are matched equally across groups using this metric, we fail to reject the null hypothesis that the joint distribution of outcomes in block $\mathcal{J}_{\ell}, \ell \in \{1,\dots ,L\}$ is the same across the treatment and control groups.
 
-The number of treatment-control pairings in the optimal non-bipartite pairing within the block of outcomes $\mathcal{J}_\ell$, denoted by $A_{\ell}, \ell \in \{1,\dots ,L\}$, is a summary statistic allowing us to test the null hypothesis of interest. Its exact $p$-value can be calculated. Asymptotically, the studentized value of $A_\ell$ follows a normal standard distribution. For each block, we present these asymptotic $p$-values to complement the information provided by the combining functions.\footnote{The exact $p$-values render similar results. We display the asymptotic $p$-values for expositional simplicity.}
+The number of treatment-control pairings in the optimal non-bipartite pairing within the block of outcomes $\mathcal{J}_\ell$, denoted by $A_{\ell}, \ell \in \{1,\dots ,L\}$, is a summary statistic allowing us to test the null hypothesis of interest. Its exact $p$-value can be calculated. Asymptotically, the studentized value of $A_\ell$ follows a normal standard distribution. For each block, we present these asymptotic $p$-values to complement the information provided by the combining functions.\footnote{The exact $p$-values render similar results. We display the asymptotic $p$-values for computational simplicity.}
