implemented JJH round 2 edits and Jorge's comments

--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -2,7 +2,7 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
-\externaldocument{abc_treatmenteffects_2018-06-14a_jbb}
+\externaldocument{abc_treatmenteffects}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
