--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -76,6 +76,6 @@ Parents of more advantaged girls in the control group are more likely to send th
 
 As shown in Section~\ref{sec:treatment-effects}, the childcare supplied by ABC/CARE increases maternal employment and family income in childhood. This effect is especially pronounced for the mothers of girls. Differentially higher employment of mothers induced by the program led to larger treatment effects for income for families of girls as a result of the childcare afforded mothers. HOME scores are also differentially enhanced for girls.
 
-More fathers are present for boys. At baseline, this leads to more family resources for boys. Family income is higher for boys than girls after treatment despite the differential treatment effect in employment for the mothers of girls. While boys benefit from the greater presence of the father, there is no program-induced treatment effect on inducing fathers into the home.
+More fathers are present for boys. At baseline, this leads to more family resources for boys. Family income is higher for boys than girls after treatment despite the differential treatment effect in employment for the mothers of girls. While boys benefit from the greater presence of the father, there is no program-induced treatment effect attracting fathers to stay the home.
 
 
